--- a/portal.html
+++ b/portal.html
@@ -19,7 +19,7 @@
         <main>
             <h2>CIT 230 - Assignment Portal</h2>
             <ul>
-            <li>Lesson 14: <a href="https://rebeccaceleste.github.io/index.html">Weather Time</a></li>
+            <li>Lesson 14: <a href="https://rebeccaceleste.github.io/index.html">Term Site</a></li>
             
             </ul>
         </main>
