--- a/adventuretours.html
+++ b/adventuretours.html
@@ -23,7 +23,7 @@
       </ul>
       <ul class="navbar-right">
         <li class="naviitem"><a href="index.html">Home</a></li>
-        <li class="naviitem"><a href="adventuretours.html">Adventure Tours</a>
+        <li class="naviitem" id="active"><a href="adventuretours.html">Adventure Tours</a>
           <ul>
               <li><a href="firstadventure.html">Little Moab</a></li>
               <li><a href="secondadventure.html">Top of the World</a></li>
