--- a/continentaldivide.html
+++ b/continentaldivide.html
@@ -29,7 +29,7 @@
               <li><a href="secondadventure.html">Top of the World</a></li>
           </ul>
         </li>
-        <li class="naviitem"><a href="continentaldivide.html">Events</a>
+        <li class="naviitem" id="active"><a href="continentaldivide.html">Events</a>
           <ul>
             <li><a href="continentaldivide.html">Cycle the Continental Divide</a></li>
           </ul>
