--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img id="logo" src="images/mountainspokelogo.png" alt="Mountain Spoke Logo" width="160px" height="">
       </ul>
       <ul class="navbar-right">
-        <li class="naviitem"><a href="index.html">Home</a></li>
+        <li class="naviitem" id="active"><a href="index.html">Home</a></li>
         <li class="naviitem"><a href="adventuretours.html">Adventure Tours</a>
           <ul>
               <li><a href="firstadventure.html">Little Moab</a></li>
