--- a/service.html
+++ b/service.html
@@ -36,7 +36,7 @@
         </li>
         <li class="naviitem"><a href="sales.html">Sales</a>
         </li>
-        <li class="naviitem"><a href="service.html">Services</a></li>
+        <li class="naviitem" id="active"><a href="service.html">Services</a></li>
         <li class="naviitem"><a href="contact.html">Contact</a></li>
       </ul>
     			
