--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <li class="naviitem"><a href="sales.html">Sales</a>
         </li>
         <li class="naviitem"><a href="service.html">Services</a></li>
-        <li class="naviitem"><a href="contact.html">Contact</a></li>
+        <li class="naviitem" id="active"><a href="contact.html">Contact</a></li>
       </ul>
     			
   </nav>
