--- a/sales.html
+++ b/sales.html
@@ -34,7 +34,7 @@
             <li><a href="continentaldivide.html">Cycle the Continental Divide</a></li>
           </ul>
         </li>
-        <li class="naviitem"><a href="sales.html">Sales</a>
+        <li class="naviitem" id="active"><a href="sales.html">Sales</a>
         </li>
         <li class="naviitem"><a href="service.html">Services</a></li>
         <li class="naviitem"><a href="contact.html">Contact</a></li>
